Finalização do Site institucional

--- a/index.html
+++ b/index.html
@@ -1,24 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AquaTech - Soluções Tecnológicas</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="header">
-        <div class="container">
-            <h1 class="titulo">AquaTech</h1>
-            <ul class="navbar">
-                <li> Inicial </li>
-                <li> Simulador </li>
-                <li> | </li>
-                <li> Login </li>
-                <li> Cadastro </li>
+      <div class="container">
+        <h1 class="titulo">AquaTech</h1>
+        <ul class="navbar">
+          <li>Inicial</li>
+          <li>Simulador</li>
+          <li>|</li>
+          <li>Login</li>
 
-            </ul>
-        </div>
+          <a href="cadastro.html">
+            <li>Cadastro</li>
+          </a>
+        </ul>
+      </div>
     </div>
-</body>
+
+    <div class="banner">
+      <div class="container">
+        <p>Preservando <b>hoje</b>, para existirem <b>amanhã</b></p>
+      </div>
+    </div>
+
+    <div class="social">
+      <div class="container">
+        <div class="box">
+          <img src="./assets/imagens/imagens/planet-earth_color.png" alt="" />
+          <h2>Missão</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            consequuntur suscipit officia labore corrupti, voluptas eligendi
+            ipsa laboriosam eos magni exercitationem. Ratione ipsam blanditiis
+            quos vero ex illo aperiam consequuntur?
+          </p>
+        </div>
+        <div class="box">
+          <img src="./assets/imagens/imagens/lightbulb_color.png" alt="" />
+          <h2>Visão</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            consequuntur suscipit officia labore corrupti, voluptas eligendi
+            ipsa laboriosam eos magni exercitationem. Ratione ipsam blanditiis
+            quos vero ex illo aperiam consequuntur?
+          </p>
+        </div>
+        <div class="box">
+          <img src="./assets/imagens/imagens/growth_color.png" alt="" />
+          <h2>Valores</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            consequuntur suscipit officia labore corrupti, voluptas eligendi
+            ipsa laboriosam eos magni exercitationem. Ratione ipsam blanditiis
+            quos vero ex illo aperiam consequuntur?
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <p>Feito com amor &hearts; pelos alunos da SPTech &copy;</p>
+      </div>
+    </div>
+  </body>
 </html>
