--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <h1 class="titulo">AquaTech</h1>
         <ul class="navbar">
-          <li>Inicial</li>
+          <a href="index.html"><li>Inicial</li></a>
           <li>Simulador</li>
           <li>|</li>
           <li>Login</li>
