--- a/cadastro.html
+++ b/cadastro.html
@@ -26,19 +26,19 @@
           <h1>Bem-vindo!</h1>
           <div>
             <span class="span">Nome:</span>
-            <input type="text" id="input_nome" class="input" />
+            <input type="text" id="input_nome" class="input" placeholder="Seu nome" />
           </div>
           <div>
             <span class="span">E-mail:</span>
-            <input type="text" id="input_email" class="input" />
+            <input type="text" id="input_email" class="input" placeholder="meuemail@provedor.com"/>
           </div>
           <div>
             <span class="span">Senha:</span>
-            <input type="password" id="input_senha" class="input" />
+            <input type="password" id="input_senha" class="input" placeholder="******"/>
           </div>
           <div>
             <span class="span">Confirmação da Senha:</span>
-            <input type="password" id="input_confirmacao" class="input" />
+            <input type="password" id="input_confirmacao" class="input" placeholder="******"/>
           </div>
           <button class="button">Cadastrar</button>
         </div>
